@@ -1,3 +1,8 @@
+2006-02-27  Jakub Jelinek  <jakub@redhat.com>
+
+	* elf-eh-frame.c (_bfd_elf_discard_section_eh_frame): Handle S flag.
+	(_bfd_elf_write_section_eh_frame): Likewise.
+
 2006-02-27  Carlos O'Donell  <carlos@codesourcery.com>
 
 	* po/Make-in: Add html target.
